D11 match day view uses ListContainer.

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -46,6 +46,10 @@
   background-color: $d11-blue;
 }
 
+.vertical-align-test {
+  background: $d11-50-50-test-background;
+}
+
 //.v-btn {
 //    text-transform: none;
 //}
