Premier League view uses ListContainer.

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -12,6 +12,10 @@
   letter-spacing: 0px;
 }
 
+.h1-container {
+  padding-bottom: $d11-spacer;
+}
+
 .d11-button-container {
   padding-left: 3px;
   padding-right: 3px;
